@@ -45,31 +45,37 @@ predicate(rename_file/2,78,static,private,monofile,built_in,[
     proceed]).
 
 
-predicate(unlink/1,85,static,private,monofile,built_in,[
+predicate(copy_file/2,85,static,private,monofile,built_in,[
+    call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[copy_file,2]),
+    call_c('Pl_Copy_File_2',[boolean],[x(0),x(1)]),
+    proceed]).
+
+
+predicate(unlink/1,92,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[unlink,2]),
     call_c('Pl_Unlink_1',[],[x(0)]),
     proceed]).
 
 
-predicate(delete_file/1,92,static,private,monofile,built_in,[
+predicate(delete_file/1,99,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[delete_file,2]),
     call_c('Pl_Delete_File_1',[boolean],[x(0)]),
     proceed]).
 
 
-predicate(file_exists/1,99,static,private,monofile,built_in,[
+predicate(file_exists/1,106,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[file_exists,1]),
     call_c('Pl_File_Exists_1',[boolean],[x(0)]),
     proceed]).
 
 
-predicate(file_permission/2,104,static,private,monofile,built_in,[
+predicate(file_permission/2,111,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[file_permission,2]),
     call_c('Pl_File_Permission_2',[boolean],[x(0),x(1)]),
     proceed]).
 
 
-predicate(file_property/2,111,static,private,monofile,built_in,[
+predicate(file_property/2,118,static,private,monofile,built_in,[
     pragma_arity(3),
     get_current_choice(x(2)),
     allocate(3),
@@ -86,7 +92,7 @@ predicate(file_property/2,111,static,private,monofile,built_in,[
     execute('$file_prop'/2)]).
 
 
-predicate('$check_file_prop'/1,119,static,private,monofile,built_in,[
+predicate('$check_file_prop'/1,126,static,private,monofile,built_in,[
     try_me_else(1),
     call_c('Pl_Blt_Var',[fast_call,boolean],[x(0)]),
     proceed,
@@ -169,7 +175,7 @@ label(19),
     execute('$pl_err_domain'/2)]).
 
 
-predicate('$file_prop'/2,144,static,private,monofile,built_in,[
+predicate('$file_prop'/2,151,static,private,monofile,built_in,[
     switch_on_term(2,fail,fail,fail,1),
 
 label(1),
@@ -272,7 +278,7 @@ label(17),
     proceed]).
 
 
-predicate('$file_prop_perm'/2,173,static,private,monofile,built_in,[
+predicate('$file_prop_perm'/2,180,static,private,monofile,built_in,[
     switch_on_term(2,1,fail,fail,fail),
 
 label(1),
@@ -315,43 +321,43 @@ label(9),
     execute(file_permission/2)]).
 
 
-predicate(temporary_name/2,188,static,private,monofile,built_in,[
+predicate(temporary_name/2,195,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[temporary_name,2]),
     call_c('Pl_Temporary_Name_2',[boolean],[x(0),x(1)]),
     proceed]).
 
 
-predicate(temporary_file/3,195,static,private,monofile,built_in,[
+predicate(temporary_file/3,202,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[temporary_file,3]),
     call_c('Pl_Temporary_File_3',[boolean],[x(0),x(1),x(2)]),
     proceed]).
 
 
-predicate(date_time/1,202,static,private,monofile,built_in,[
+predicate(date_time/1,209,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[date_time,1]),
     call_c('Pl_Date_Time_1',[boolean],[x(0)]),
     proceed]).
 
 
-predicate(host_name/1,209,static,private,monofile,built_in,[
+predicate(host_name/1,216,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[host_name,1]),
     call_c('Pl_Host_Name_1',[boolean],[x(0)]),
     proceed]).
 
 
-predicate(os_version/1,216,static,private,monofile,built_in,[
+predicate(os_version/1,223,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[os_version,1]),
     call_c('Pl_Os_Version_1',[boolean],[x(0)]),
     proceed]).
 
 
-predicate(architecture/1,223,static,private,monofile,built_in,[
+predicate(architecture/1,230,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[architecture,1]),
     call_c('Pl_Architecture_1',[boolean],[x(0)]),
     proceed]).
 
 
-predicate(shell/0,230,static,private,monofile,built_in,[
+predicate(shell/0,237,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[shell,0]),
     put_atom('',0),
     put_integer(0,1),
@@ -359,52 +365,52 @@ predicate(shell/0,230,static,private,monofile,built_in,[
     proceed]).
 
 
-predicate(shell/1,234,static,private,monofile,built_in,[
+predicate(shell/1,241,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[shell,1]),
     put_integer(0,1),
     call_c('Pl_Shell_2',[boolean],[x(0),x(1)]),
     proceed]).
 
 
-predicate(shell/2,238,static,private,monofile,built_in,[
+predicate(shell/2,245,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[shell,2]),
     call_c('Pl_Shell_2',[boolean],[x(0),x(1)]),
     proceed]).
 
 
-predicate(system/1,245,static,private,monofile,built_in,[
+predicate(system/1,252,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[system,1]),
     put_integer(0,1),
     call_c('Pl_System_2',[boolean],[x(0),x(1)]),
     proceed]).
 
 
-predicate(system/2,249,static,private,monofile,built_in,[
+predicate(system/2,256,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[system,2]),
     call_c('Pl_System_2',[boolean],[x(0),x(1)]),
     proceed]).
 
 
-predicate(spawn/2,256,static,private,monofile,built_in,[
+predicate(spawn/2,263,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[spawn,2]),
     put_integer(0,2),
     call_c('Pl_Spawn_3',[boolean],[x(0),x(1),x(2)]),
     proceed]).
 
 
-predicate(spawn/3,260,static,private,monofile,built_in,[
+predicate(spawn/3,267,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[spawn,3]),
     call_c('Pl_Spawn_3',[boolean],[x(0),x(1),x(2)]),
     proceed]).
 
 
-predicate(sleep/1,267,static,private,monofile,built_in,[
+predicate(sleep/1,274,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[sleep,1]),
     call_c('Pl_Sleep_1',[],[x(0)]),
     proceed]).
 
 
-predicate(popen/3,274,static,private,monofile,built_in,[
+predicate(popen/3,281,static,private,monofile,built_in,[
     allocate(3),
     get_variable(y(0),0),
     get_variable(y(1),1),
@@ -420,7 +426,7 @@ predicate(popen/3,274,static,private,monofile,built_in,[
     proceed]).
 
 
-predicate(exec/5,286,static,private,monofile,built_in,[
+predicate(exec/5,293,static,private,monofile,built_in,[
     allocate(5),
     get_variable(y(0),0),
     get_variable(y(1),1),
@@ -445,7 +451,7 @@ predicate(exec/5,286,static,private,monofile,built_in,[
     execute('$exec'/5)]).
 
 
-predicate('$exec/5_$aux1'/1,286,static,private,monofile,local,[
+predicate('$exec/5_$aux1'/1,293,static,private,monofile,local,[
     pragma_arity(2),
     get_current_choice(x(1)),
     try_me_else(1),
@@ -458,7 +464,7 @@ label(1),
     proceed]).
 
 
-predicate(exec/4,298,static,private,monofile,built_in,[
+predicate(exec/4,305,static,private,monofile,built_in,[
     allocate(4),
     get_variable(y(0),0),
     get_variable(y(1),1),
@@ -477,7 +483,7 @@ predicate(exec/4,298,static,private,monofile,built_in,[
     execute('$exec'/5)]).
 
 
-predicate('$exec'/5,306,static,private,monofile,built_in,[
+predicate('$exec'/5,313,static,private,monofile,built_in,[
     allocate(7),
     get_variable(y(0),0),
     get_variable(y(1),2),
@@ -502,7 +508,7 @@ predicate('$exec'/5,306,static,private,monofile,built_in,[
     proceed]).
 
 
-predicate(create_pipe/2,316,static,private,monofile,built_in,[
+predicate(create_pipe/2,323,static,private,monofile,built_in,[
     allocate(3),
     get_variable(y(0),1),
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[create_pipe,2]),
@@ -518,7 +524,7 @@ predicate(create_pipe/2,316,static,private,monofile,built_in,[
     proceed]).
 
 
-predicate(fork_prolog/1,325,static,private,monofile,built_in,[
+predicate(fork_prolog/1,332,static,private,monofile,built_in,[
     allocate(1),
     get_variable(y(0),0),
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[fork_prolog,1]),
@@ -530,7 +536,7 @@ predicate(fork_prolog/1,325,static,private,monofile,built_in,[
     proceed]).
 
 
-predicate('$fork_prolog/1_$aux1'/1,325,static,private,monofile,local,[
+predicate('$fork_prolog/1_$aux1'/1,332,static,private,monofile,local,[
     pragma_arity(2),
     get_current_choice(x(1)),
     try_me_else(1),
@@ -543,25 +549,25 @@ label(1),
     proceed]).
 
 
-predicate(select/5,336,static,private,monofile,built_in,[
+predicate(select/5,343,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[select,5]),
     call_c('Pl_Select_5',[boolean],[x(0),x(1),x(2),x(3),x(4)]),
     proceed]).
 
 
-predicate(prolog_pid/1,343,static,private,monofile,built_in,[
+predicate(prolog_pid/1,350,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[prolog_pid,1]),
     call_c('Pl_Prolog_Pid_1',[boolean],[x(0)]),
     proceed]).
 
 
-predicate(send_signal/2,350,static,private,monofile,built_in,[
+predicate(send_signal/2,357,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[send_signal,2]),
     call_c('Pl_Send_Signal_2',[boolean],[x(0),x(1)]),
     proceed]).
 
 
-predicate(wait/2,357,static,private,monofile,built_in,[
+predicate(wait/2,364,static,private,monofile,built_in,[
     call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[wait,2]),
     call_c('Pl_Wait_2',[boolean],[x(0),x(1)]),
     proceed]).
