@@ -2,6 +2,7 @@ Change in GNU Prolog version 1.5.1
 
 * port to RISC-V 64 bits/Linux - many thanks to
   Jasper Taylor <jasper@simulistics.com>
+* fix issue #23: add built-in predicate copy_file/2
 * fix issue #10: missing int_overflow
 * fix issue #22: math evaluation raises a float_overflow instead of int_overflow
 * fix issue #21: bug in append/3
